# brandweave

./: .replit  10brands02.csv  10brands1.csv  10listvpn.csv  1listvpn.csv  5listvpn.csv  Grok API Call.txt  Llama API call.txt  best1.csv  best5.csv  brandarchetype_nordvpn.csv  brandarchetype_surfshark.csv  chatgptsurfsharkprice.csv  claudenordvpnprice.csv  cocktails.csv  deepseeknordvpnprice.csv  fam_cyberghost.csv  fam_expressvpn.csv  fam_hotspotshield.csv  fam_ipvanish.csv  fam_mullvad.csv  fam_nordvpn.csv  fam_pia.csv  fam_protonvpn.csv  fam_purevpn.csv  fam_surfshark.csv  fam_tunnelbear.csv  fam_vypervpn.csv  fam_windscribe.csv  geminisurfsharkprice.csv  llamaexpressvpnprice.csv  llm_responses_20241024_113337.csv  llm_responses_20241024_113618.csv  llm_responses_20241024_113933.csv  llm_responses_20241024_113959.csv  llm_responses_20241024_114314.csv  llm_responses_20241024_114616.csv  llm_responses_20241024_120019.csv  llm_responses_20241024_120140.csv  llm_responses_20241024_120236.csv  (+200 more)
attached_assets/: 5listvpn.csv  Examples of Grounded Search.txt  deepseek_provider.py  example response.txt  google_grounded.txt  grounded_google_provider.py  import requests.txt  json.txt  perplexity_provider.py  submission-fix.py
frontend/: BrandChart.tsx  index.tsx
providers/: anthropic_provider.py  base.py  deepseek_provider.py  google_grounded_provider.py  google_provider.py  google_search_provider.py  grok_provider.py  grounded_google_provider.py  llama_provider.py  openai_provider.py  perplexity_provider.py  raw_grounded_google_provider.py
utils/: brand_analyzer.py  (+2 more)
(+2 files in other folders)
